@@ -4,3 +4,4 @@ New features:
 - Replaced Adam with AdamW optimizer.
 - Added support for the following loss functions:
     torch.nn.KLDivLoss, torch.nn.PoissonNLLLoss, torch.nn.HingeEmbeddingLoss, torch.nn.BCEWithLogitsLoss, torch.nn.SmoothL1Loss, torch.nn.SoftMarginLoss, torch.nn.MultiLabelSoftMarginLoss, torch.nn.CosineEmbeddingLoss, torch.nn.MarginRankingLoss, torch.nn.TripletMarginLoss
+- Added support for torch.optim.RMSprop optimizer
